--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>flock 🕊</title>
+	<meta name="description" content="An infinite supply of bunchos.">
+	<meta name="theme-color" content="#331d32">
+	<meta property="og:title" content="flock 🕊">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="/img/background.jpg">
+	<meta property="og:image:alt" content="many bunchos flying in front of clouds">
+	<meta property="og:url" content="https://andrewirino.com/flock/">
+	<meta property="og:description" content="An infinite supply of bunchos.">
+	<meta property="og:locale" content="en_US">
+	<meta name="twitter:card" content="summary">
 	<script>
 
 let birb = document.createElement('div');
@@ -154,8 +164,8 @@ h1 {
 
 #flock {
 	position: absolute;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	overflow: hidden;
 }
 
