Maybe with large image?

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:url" content="https://andrewirino.com/flock/">
 	<meta property="og:description" content="An infinite supply of bunchos.">
 	<meta property="og:locale" content="en_US">
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:image" content="https://andrewirino.com/img/background.jpg">
 	<meta name="twitter:image:alt" content="many bunchos flying in front of clouds">
 	<script>
