--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta property="og:description" content="An infinite supply of bunchos.">
 	<meta property="og:locale" content="en_US">
 	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="flock 🕊">
 	<meta name="twitter:image" content="https://andrewirino.com/img/background.jpg">
 	<meta name="twitter:image:alt" content="many bunchos flying in front of clouds">
 	<script>
