Full url I guess

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="theme-color" content="#331d32">
 	<meta property="og:title" content="flock 🕊">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="img/background.jpg">
+	<meta property="og:image" content="https://andrewirino.com/flock/img/background.jpg">
 	<meta property="og:image:alt" content="many bunchos flying in front of clouds">
 	<meta property="og:url" content="https://andrewirino.com/flock/">
 	<meta property="og:description" content="An infinite supply of bunchos.">
