No one knows what a buncho is

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ h1 {
 	<div id="info" hidden style="opacity: 0;">
 		<div class="details">
 			<h1>flock</h1>
-			<p>An evening project providing infinite bunchos.</p>
+			<p>An evening project providing infinite <a href="https://en.wikipedia.org/wiki/Java_sparrow">bunchos</a>.</p>
 			<p>Illustration by <a href="https://www.jeanyoung.me/">Jean</a>.</p>
 			<p>Rest by <a href="https://andrewirino.com">me</a>.</p>
 			<p><a href="https://github.com/drewtato/flock">Source</a>.</p>
