--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ h1 {
 	margin: 1em;
 	border: 2px solid #321e33;
 	border-radius: 1em;
-	max-width: 42em;
+	max-width: 22em;
 	text-align: center;
 }
 
@@ -325,7 +325,7 @@ h1 {
 	<div id="info" hidden style="opacity: 0;">
 		<div class="details">
 			<h1>flock</h1>
-			<p>An evening project providing infinite <a href="https://en.wikipedia.org/wiki/Java_sparrow">bunchos</a>.</p>
+			<p>An <del>evening</del> weekend project providing infinite <a href="https://en.wikipedia.org/wiki/Java_sparrow">bunchos</a>.</p>
 			<p>Illustration by <a href="https://www.jeanyoung.me/">Jean</a>.</p>
 			<p>Rest by <a href="https://andrewirino.com">me</a>.</p>
 			<p><a href="https://github.com/drewtato/flock">Source</a>.</p>
