--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@ var docCookies = {
 	}
 };
 
+function id(idString) {
+	return document.getElementById(idString);
+}
+
+function frame(callback) {
+	return window.requestAnimationFrame(callback);
+}
+
+Element.prototype.prop = function (property, value) {
+	return this.style.setProperty(property, value);
+}
+
+function rand() {
+	return Math.random();
+}
+
 let birb = document.createElement('div');
 birb.classList.add(['birb']);
 let counter = 0;
@@ -82,7 +98,7 @@ function spawnBirbHandler() {
 	// makes floor(sqrt(n)) birds where n is number of wheel/touchmove events since last frame.
 	if (queued == 0) {
 		queued += 1
-		window.requestAnimationFrame(() => {
+		frame(() => {
 			let normalizedQueued = Math.floor(Math.sqrt(queued));
 			queued = 0;
 			addBuncho(normalizedQueued);
@@ -95,21 +111,21 @@ function spawnBirbHandler() {
 	}
 }
 
-function spawnBirb(top = Math.floor(Math.random() * 140 - 20)) {
-	let flock = document.getElementById('flock');
+function spawnBirb(top = Math.floor(rand() * 140 - 20)) {
+	let flock = id('flock');
 	let b = birb.cloneNode(true);
-	if (Math.random() > 0.75) {
+	if (rand() > 0.75) {
 		b.classList.add('two');
 	}
 
-	b.style.setProperty('--top', top + 'vh');
-	b.style.setProperty('--left', -Math.floor(Math.random() * 100) + 'px');
-	b.style.setProperty('--end', Math.floor(Math.random() * 800 - 600) + 'px');
-	b.style.setProperty('--speed', Math.random() * 2 + 6 + 's');
+	b.prop('--top', top + 'vh');
+	b.prop('--left', -Math.floor(rand() * 100) + 'px');
+	b.prop('--end', Math.floor(rand() * 800 - 600) + 'px');
+	b.prop('--speed', rand() * 2 + 6 + 's');
 
-	let flaps = Math.random() * 100 + 400;
-	b.style.setProperty('--flap', flaps + 'ms');
-	b.style.setProperty('--delay', -Math.random() * flaps + 'ms');
+	let flaps = rand() * 100 + 400;
+	b.prop('--flap', flaps + 'ms');
+	b.prop('--delay', -rand() * flaps + 'ms');
 
 	flock.append(b);
 
@@ -123,42 +139,41 @@ function sleep(ms) {
 }
 
 function removeScroll() {
-	let flock = document.getElementById('flock');
+	let flock = id('flock');
 	flock.removeEventListener('wheel', removeScroll);
 	flock.removeEventListener('touchmove', removeScroll);
-	let scroll = document.getElementById('scroll');
-	scroll.style.setProperty('opacity', 0);
+	let scroll = id('scroll');
+	scroll.prop('opacity', 0);
 	scroll.addEventListener('transitionend', () => document.body.removeChild(scroll));
 }
 
 function toggleInfo() {
-	let info = document.getElementById('info');
-	if (info.classList.contains('justCount')) {
-		info.classList.remove('justCount');
-		return;
-	}
-
+	let info = id('info')
 	if (info.hidden) {
 		info.hidden = false;
-		window.requestAnimationFrame(() => {
-			window.requestAnimationFrame(() => {
-				info.style.setProperty('opacity', 1);
-			});
-		});
-	} else {
-		info.style.setProperty('opacity', 0);
-		info.addEventListener('transitionend', function hide() {
-			info.hidden = true;
-			info.removeEventListener('transitionend', hide);
-		});
+	}
+	
+	// Transition doesn't work if opacity changes on the same frame as hidden = false
+	// I think hidden elements don't get transitions
+	frame(() => {
+		frame(() => info.classList.toggle('show'))
+	});
+}
+
+function afterToggleInfo() {
+	let info = id('info');
+	if (!info.classList.contains('show') && !info.classList.contains('justCount')) {
+		info.hidden = true;
 	}
 }
 
 function addBuncho(num) {
 	counter += num;
-	let countElem = document.getElementById('counter');
+	let countElem = id('counter');
 	countElem.innerHTML = String(counter);
-	docCookies.setItem('bunchos', String(counter), Infinity);
+	if (id('save').checked) {
+		docCookies.setItem('bunchos', String(counter), Infinity);
+	}
 }
 
 function clearBuncho() {
@@ -166,32 +181,65 @@ function clearBuncho() {
 	addBuncho(0);
 }
 
-function togglePinCount() {
-	document.getElementById('info').classList.add('justCount');
+function checkBunchoCookie() {
+	if (!id('save').checked) {
+		docCookies.removeItem('bunchos');
+	} else {
+		docCookies.setItem('bunchos', String(counter), Infinity);
+	}
+}
+
+function checkPin() {
+	let pinned = id('pin').checked;
+	if (pinned) {
+		id('info').classList.add('justCount');
+		docCookies.setItem('alwaysShow', true, Infinity);
+	} else {
+		id('info').classList.remove('justCount');
+		docCookies.removeItem('alwaysShow');
+	}
 }
 
 async function main() {
-	let saved = Number(docCookies.getItem('bunchos'));
-	if (saved > counter) {
-		counter = saved;
+	let savedBunchos = docCookies.getItem('bunchos');
+	if (savedBunchos !== null) {
+		id('save').checked = true;
+		savedBunchos = Number(savedBunchos);
+		if (savedBunchos > counter) {
+			counter = savedBunchos;
+		}
+	} else {
+		id('save').checked = false;
+	}
+	
+	let alwaysShow =  docCookies.getItem('alwaysShow');
+	if (alwaysShow !== null) {
+		id('pin').checked = true;
+		id('info').classList.add(['justCount']);
+		id('info').hidden = false;
+	} else {
+		id('pin').checked = false;
 	}
 
-	let flock = document.getElementById('flock');
+	let flock = id('flock');
 	flock.addEventListener('wheel', spawnBirbHandler);
 	flock.addEventListener('touchmove', spawnBirbHandler);
 	flock.addEventListener('click', toggleInfo);
+	id('info').addEventListener('transitionend', afterToggleInfo);
+	id('save').addEventListener('input', checkBunchoCookie);
+	id('pin').addEventListener('input', checkPin);
 
 	await sleep(1000);
-	spawnBirb(Math.floor(Math.random() * 5 + 25));
+	spawnBirb(Math.floor(rand() * 5 + 25));
 	addBuncho(1);
 	await sleep(50);
-	spawnBirb(Math.floor(Math.random() * 5 + 30));
+	spawnBirb(Math.floor(rand() * 5 + 30));
 	addBuncho(1);
 	await sleep(30);
-	spawnBirb(Math.floor(Math.random() * 5 + 40));
+	spawnBirb(Math.floor(rand() * 5 + 40));
 	addBuncho(1);
 
-	document.getElementById('scroll').removeAttribute('style');
+	id('scroll').removeAttribute('style');
 	await sleep(2000);
 
 	flock.addEventListener('wheel', removeScroll);
@@ -231,6 +279,32 @@ a {
 
 a:hover {
 	color: #000;
+}
+
+input[type=checkbox] {
+	display: none;
+}
+
+input[type="checkbox"] + label::before {
+  font-size: 0.9em;
+  content: "\00a0";
+  box-sizing: border-box;
+  height: 1.5em;
+  width: 1.5em;
+  border: 2px solid #5c4140;
+  margin: 0 0.4em;
+  border-radius: 30%;
+  display: inline-block;
+  line-height: 1.4;
+}
+
+input[type="checkbox"]:checked + label::before {
+  content: "✔";
+}
+
+label {
+  line-height: 1.8;
+  cursor: pointer;
 }
 
 .birb {
@@ -299,6 +373,14 @@ h1 {
 	text-align: center;
 }
 
+#info:not(.justCount) {
+	opacity: 0;
+}
+
+#info.show {
+	opacity: 1;
+}
+
 #info>* {
 	margin: 1em;
 }
@@ -313,12 +395,12 @@ h1 {
 	font-size: 0.6em;
 }
 
-#info.justCount .details,
-#info.justCount #countButton {
+#info.justCount:not(.show)>:not(.counterItems),
+#info.justCount:not(.show)>.counterItems>:not(.counterLine) {
 	display: none;
 }
 
-#info.justCount {
+#info.justCount:not(.show) {
 	align-self: end;
 }
 
@@ -333,7 +415,8 @@ h1 {
 		<div class="birb"></div>
 		<div class="birb two"></div>
 	</div>
-	<div id="info" hidden style="opacity: 0;">
+	<!-- <div id="info" hidden style="opacity: 0;"> -->
+	<div id="info" hidden>
 		<div class="details">
 			<h1>flock</h1>
 			<p>An <del>evening</del> weekend project providing infinite&nbsp;<a href="https://en.wikipedia.org/wiki/Java_sparrow">bunchos</a>.</p>
@@ -341,10 +424,12 @@ h1 {
 			<p>Rest by <a href="https://andrewirino.com">me</a>.</p>
 			<p><a href="https://github.com/drewtato/flock">Source</a>.</p>
 		</div>
-		<p>
-			<span id="counter">0</span> bunchos have flown&nbsp;by.
+		<p class="counterItems">
+			<span class="counterLine"><span id="counter">0</span> bunchos have flown&nbsp;by.</span>
 			<br>
-			<a href="#" id="countButton" onclick="togglePinCount()">always show</a>
+			<input type="checkbox" name="pin" id="pin"><label for="pin">always show</label>
+			<br>
+			<input type="checkbox" name="save" id="save"><label for="save">save bunchos</label>
 		</p>
 		<div class="details">
 			<a href="#" class="small" onclick="clearBuncho()">clear counter</a>
