--- a/index.html
+++ b/index.html
@@ -362,7 +362,6 @@ h1 {
 
 #info {
 	transition: opacity 0.6s linear;
-	position: absolute;
 	background: rgba(250, 231, 162, 0.8);
 	border: 2px solid #321e33;
 	border-radius: 1em;
@@ -401,7 +400,7 @@ h1 {
 }
 
 #info.justCount:not(.show) {
-	align-self: end;
+	align-self: flex-end;
 }
 
 	</style>
