--- a/index.html
+++ b/index.html
@@ -489,6 +489,9 @@ h1 {
 #info.show .counterLine {
 	margin-bottom: 0.2em;
 }
+#info:not(.justCount):not(.show) .counterLine {
+	margin-bottom: 0.2em;
+}
 
 .hasTooltip {
 	position: relative;
