--- a/index.html
+++ b/index.html
@@ -281,6 +281,22 @@ window.addEventListener('load', main);
 	</script>
 	<style>
 
+@font-face {
+	font-family: 'Courgette';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: local('Courgette Regular'), local('Courgette-Regular'), url('font/courgette/Courgette-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Kaushan Script';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Kaushan Script'), local('KaushanScript-Regular'), url('font/kaushanscript/KaushanScript-Regular.woff2') format('woff2');
+}
+
 body {
 	height: 100vh;
 	width: 100vw;
@@ -521,7 +537,7 @@ h1 {
 }
 
 	</style>
-	<link href="https://fonts.googleapis.com/css?family=Courgette|Kaushan+Script&display=swap" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Courgette|Kaushan+Script&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
