--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>flock 🕊</title>
+	<link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon">
 	<meta name="description" content="An infinite supply of bunchos.">
 	<meta name="theme-color" content="#331d32">
 	<meta property="og:title" content="flock 🕊">
