--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ var docCookies = {
 					break;
 			}
 		}
-		document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "");
+		document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "") + ";SameSite=Lax";
 		return true;
 	},
 	removeItem: function(sKey, sPath, sDomain) {
@@ -181,7 +181,7 @@ function addBuncho(num) {
 	let countElem = id('counter');
 	countElem.innerHTML = String(counter);
 	if (id('save').checked) {
-		docCookies.setItem('bunchos', String(counter), Infinity);
+		docCookies.setItem('bunchos', String(counter), Infinity, "/");
 	}
 }
 
@@ -194,7 +194,7 @@ function checkBunchoCookie() {
 	if (!id('save').checked) {
 		docCookies.removeItem('bunchos');
 	} else {
-		docCookies.setItem('bunchos', String(counter), Infinity);
+		docCookies.setItem('bunchos', String(counter), Infinity, "/");
 	}
 }
 
@@ -202,7 +202,7 @@ function checkPin() {
 	let pinned = id('pin').checked;
 	if (pinned) {
 		id('info').classList.add('justCount');
-		docCookies.setItem('alwaysShow', true, Infinity);
+		docCookies.setItem('alwaysShow', true, Infinity, "/");
 	} else {
 		id('info').classList.remove('justCount');
 		docCookies.removeItem('alwaysShow');
@@ -224,7 +224,7 @@ async function main() {
 			counter = savedBunchos;
 		}
 	} else {
-		id('save').checked = false;
+		id('save').checked = true;
 	}
 	
 	let alwaysShow =  docCookies.getItem('alwaysShow');
